--- a/Project/Client/Views/Admin/UpdateReport.cshtml
+++ b/Project/Client/Views/Admin/UpdateReport.cshtml
@@ -1,34 +1,36 @@
-﻿@{
+﻿@using Client.Models.ReportDTO
+@model ReportsModel
+@{
     Layout = "_LayoutAdmin";
 }
 @{
     ViewData["Title"] = "Update Report";
 }
 <h2>Update Report</h2>
-<form asp-action="" method="post" class="system-form">
+<form asp-action="UpdateReportConfirm" asp-controller="Admin" method="post" class="system-form">
     <div class="row" style="background: #f9f9f9; border: 2px solid #00A97F; border-radius:5px; padding:1vw;">
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">Report ID</label>
+                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Id</label>
                     <input class="form-control system-input" readonly="readonly" />
                     <span class="text-danger"></span>
                 </div>
                 <div class=" col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">Email</label>
-                    <input class="form-control system-input" readonly="readonly" />
+                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Email</label>
+                    <input class="form-control system-input" disabled />
                     <span class="text-danger"></span>
                 </div>
             </div>
             
             <div class="row mt-2">
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">Created At</label>
-                    <input type="date" class="form-control system-input" readonly />
+                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.CreatedAt</label>
+                    <input type="date" class="form-control system-input" disabled />
                     <span class="text-danger"></span>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">Status</label>
+                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Status</label>
                     <select class="form-select system-select" aria-label="Status">
                         <option value="0">Active</option>
                         <option value="1">Inactive</option>
