--- a/Project/Client/Views/G4T/ContactUs.cshtml
+++ b/Project/Client/Views/G4T/ContactUs.cshtml
@@ -1,89 +1,98 @@
-﻿<div class="ContactUs">
-    <h1 class="title">Contact Us</h1>
-    <div class="row">
-        <div class="col-md-6 content">
-            <h1>We would love to hear from you</h1>
-            <p>Need help? Have a question? Completely Lost?</p>
-            <p>
-                There are a variety of ways to contact the game administration on each of our games.
-                You can use the form here, email us directly, request help on game forums, and even use in-game commands.
-            </p>
-        </div>
-        <div class="col-md-6 form-section">
-            <div class="d-flex mb-3">
-                <input class="form-control me-2" placeholder="Your Name" />
-                <input class="form-control" placeholder="Your Email" />
+﻿@model Client.Models.CreateReportsModels
+
+
+<form asp-action="CreateReport" asp-controller="Admin" enctype="multipart/form-data">
+    <div class="ContactUs">
+        <h1 class="title">Contact Us</h1>
+        <div class="row">
+            <div class="col-md-6 content">
+                <h1>We would love to hear from you</h1>
+                <p>Need help? Have a question? Completely Lost?</p>
+                <p>
+                    There are a variety of ways to contact the game administration on each of our games.
+                    You can use the form here, email us directly, request help on game forums, and even use in-game commands.
+                </p>
             </div>
-            <input class="form-control mb-3" placeholder="Subject" />
-            <textarea class="form-control mb-3" placeholder="Message"></textarea>
-            <button class="btn btn-primary w-100">Send Message</button>
+            <div class="col-md-6 form-section">
+                <div class="d-flex mb-3">
+                    <input class="form-control me-2" placeholder="Your Name" />
+                    <input class="form-control" asp-for="Email" placeholder="Your Email" />
+                </div>
+                <input class="form-control mb-3" asp-for="Related" placeholder="Subject" />
+                <textarea class="form-control mb-3" asp-for="Description" placeholder="Message"></textarea>
+                @* <button class="btn btn-primary w-100">Send Message</button> *@
+                <div class="form-group mt-3 text-center">
+                    <input type="submit" value="Create" class="btn btn-primary w-100" />
+                </div>
+            </div>
+        </div>
+
+        <div class="row options-section">
+            <div class="col-md-4 option">
+                <div class="icon-container">
+                    <i class="fa-brands fa-fort-awesome icon"></i>
+                </div>
+                <h2>Ask Other Players</h2>
+                <h1>GAME FORUMS</h1>
+                <div class="option-description">
+                    <p>Our players love to help people.</p>
+                    <p>
+                        If you have already created a game, simply click on one of our game forums, log in with your character information, and ask a question.
+                    </p>
+                    <ul>
+                        <li><a href="#">Achaea Forums</a></li>
+                        <li><a href="#">Aetolia Forums</a></li>
+                        <li><a href="#">Imperian Forums</a></li>
+                        <li><a href="#">Lusternia Forums</a></li>
+                    </ul>
+                    <p>You can also search on the forums. If you have a question about something, it may have been asked before.</p>
+                </div>
+            </div>
+
+            <div class="col-md-4 option">
+                <div class="icon-container">
+                    <i class="fa-solid fa-envelope icon"></i>
+                </div>
+                <h2>Contact Support</h2>
+                <h1>Email Us Directly</h1>
+                <div class="option-description">
+                    <p>
+                        You can also contact our support staff directly. Use your email client to send mail to our address.
+                        You can also use the form above.
+                    </p>
+                    <ul>
+                        <li><a href="#">Achaea: support@achaea.com</a></li>
+                        <li><a href="#">Aetolia: support@aetolia.com</a></li>
+                        <li><a href="#">Imperian: support@imperian.com</a></li>
+                        <li><a href="#">Lusternia: support@lusternia.com</a></li>
+                    </ul>
+                    <p>When you email us, we will usually respond within 24 hours.</p>
+                </div>
+            </div>
+
+            <div class="col-md-4 option">
+                <div class="icon-container">
+                    <i class="fa-solid fa-question icon"></i>
+                </div>
+                <h2>In-Game Commands</h2>
+                <h1>Other Options</h1>
+                <div class="option-description">
+                    <p>You can also use two handy in-game commands to ask questions.</p>
+                    <p>
+                        First, you can use the NEWBIE channel to ask a question you may have.
+                        For example, you could type in the command - newbie How do I kill goblins in this game?
+                    </p>
+                    <p>
+                        One of our players or admin in the game should be able to help you with this almost instantly.
+                    </p>
+                    <p>
+                        Another option is to use the ISSUE command.
+                        This will submit a report to the administration and they will help you as soon as possible.
+                    </p>
+                    <p>Type in HELP ISSUES for more information.</p>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="row options-section">
-        <div class="col-md-4 option">
-            <div class="icon-container">
-                <i class="fa-brands fa-fort-awesome icon"></i>
-            </div>
-            <h2>Ask Other Players</h2>
-            <h1>GAME FORUMS</h1>
-            <div class="option-description">
-                <p>Our players love to help people.</p>
-                <p>
-                    If you have already created a game, simply click on one of our game forums, log in with your character information, and ask a question.
-                </p>
-                <ul>
-                    <li><a href="#">Achaea Forums</a></li>
-                    <li><a href="#">Aetolia Forums</a></li>
-                    <li><a href="#">Imperian Forums</a></li>
-                    <li><a href="#">Lusternia Forums</a></li>
-                </ul>
-                <p>You can also search on the forums. If you have a question about something, it may have been asked before.</p>
-            </div>
-        </div>
-
-        <div class="col-md-4 option">
-            <div class="icon-container">
-                <i class="fa-solid fa-envelope icon"></i>
-            </div>
-            <h2>Contact Support</h2>
-            <h1>Email Us Directly</h1>
-            <div class="option-description">
-                <p>
-                    You can also contact our support staff directly. Use your email client to send mail to our address.
-                    You can also use the form above.
-                </p>
-                <ul>
-                    <li><a href="#">Achaea: support@achaea.com</a></li>
-                    <li><a href="#">Aetolia: support@aetolia.com</a></li>
-                    <li><a href="#">Imperian: support@imperian.com</a></li>
-                    <li><a href="#">Lusternia: support@lusternia.com</a></li>
-                </ul>
-                <p>When you email us, we will usually respond within 24 hours.</p>
-            </div>
-        </div>
-
-        <div class="col-md-4 option">
-            <div class="icon-container">
-                <i class="fa-solid fa-question icon"></i>
-            </div>
-            <h2>In-Game Commands</h2>
-            <h1>Other Options</h1>
-            <div class="option-description">
-                <p>You can also use two handy in-game commands to ask questions.</p>
-                <p>
-                    First, you can use the NEWBIE channel to ask a question you may have.
-                    For example, you could type in the command - newbie How do I kill goblins in this game?
-                </p>
-                <p>
-                    One of our players or admin in the game should be able to help you with this almost instantly.
-                </p>
-                <p>
-                    Another option is to use the ISSUE command.
-                    This will submit a report to the administration and they will help you as soon as possible.
-                </p>
-                <p>Type in HELP ISSUES for more information.</p>
-            </div>
-        </div>
-    </div>
-</div>
+</form>
