update return checkout

--- a/Project/Client/Views/Order/PaymentSuccess.cshtml
+++ b/Project/Client/Views/Order/PaymentSuccess.cshtml
@@ -31,7 +31,7 @@
     </div>
 
     <div>
-        <a asp-action="UserDashboard" asp-controller="User" class="btn success-btn">View Library</a>
+        <a asp-action="Collection" asp-controller="Product" class="btn success-btn">View Library</a>
         <a asp-action="Product" asp-controller="Product" class="btn continue-btn w-auto">Continue Shopping</a>
     </div>
 </div>
